# QuickProject

./: .gitignore  LICENSE  MANIFEST.in  README.md  _Qpro  _Qpro-zh  _Qpro_zh  comp-zsh.sh  comp.sh  main.py  project_configure.csv  project_configure.json  pyproject.toml  pyproject.toml.bk  qrun-comp.sh  setup.cfg  setup.py  tcp.sh
.github/workflows/: publish.yml
Docs/: README.md  plugin.json  preload.js
Docs/doc/: configTable.html  detector.html  run.html  start.html  template.html  usage.html
Qpro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
QuickProject/: Commander.py  Qpro.py  QproFigTable.py  QproZshComp.py  TextCmp  __config__.py  __init__.py  detector.py  lang.json  qrun.py  refresh  refresh.py  run  run.py  ssh.py  tmpm.py
complete/en/: _Qpro-en  _detector  _tmpm-en
complete/fig/en/: Qpro.ts  qrun.ts
complete/fig/zh/: Qpro.ts  detector.ts  qrun.ts  tmpm.ts
complete/zh/: _Qpro-zh  _detector-zh  _qrun  _qrun-zh  _tmpm-zh  project_configure.json
complete/zsh/en/: _Qpro  _qrun  project_configure.json
complete/zsh/zh/: _Qpro  _tmpm
docs/: docusaurus.config.js  package-lock.json  project_configure.json
docs/docs/QPro-Basics/: Congratulations.md  Runner.md
docs/docs/QPro-Extras/: Commander.md  Templates.md
docs/i18n/en/: intro.md
docs/i18n/en/QPro-Basics/: Commander.md  Configure.md  _category_.json
docs/i18n/en/QPro-Extras/: Commander.md  _category_.json
docs/manager/: __config__.py  __init__.py  main.py
docs/src/components/HomepageFeatures/: index.js
docs/src/pages/: index.js
