[tool.poetry]
name = "qpro"
version = "0.13.7"
description = "Small but powerful command line APP framework"
authors = ["Rhythmicc <rhythmlian.cn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include="QuickProject"}, {include="QuickProject/lang.json"}]

[tool.poetry.dependencies]
python = "^3.7"
pyperclip = "^1.8.2"
rich = "^13.3.5"
GitPython = "^3.1.32"
inquirer-rhy = "^0.1.2"
langsrc = "^0.0.8"

[tool.poetry.scripts]
Qpro = "QuickProject.Qpro:main"
qrun = "QuickProject.qrun:main"

[tool.qpro.config]
build = "rm -rf dist; poetry build"
entry_point = ""
executable = ""

[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
port = 22
path = "/opt/homebrew/lib/python3.11/site-packages/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
